fix links destination

--- a/pages/destination/destination-europa.html
+++ b/pages/destination/destination-europa.html
@@ -38,31 +38,44 @@
         <div class="hero-img">   
           <img src="/assets/destination/image-europa.png">
         </div>
-        <div>
-          <ul class="hero-list">
-            <li>MOON</li>
-            <li>MARS</li>
-            <li class="hero-list1">EUROPA</li>
-            <li>TITAN</li>
-          </ul>
-        </div>
       </div>
     </section>
 
     <section>
-      <div class="section-2">
-        <div class="section-2-p">
-          <p>EUROPA</p>
+      <div>
+        <ul class="hero-list">
+          <li><a href="/pages/destination/destination-moon.html">MOON</a></li>
+          <li><a href="/pages/destination/destination-mars.html">MARS</a></li>
+          <li><a href="/pages/destination/destination-europa.html">EUROPA</a></li>
+          <li><a href="/pages/destination/destination-titan.html">TITAN</a></li>
+        </ul>
+      </div>
+      <div>
+        <div class="section-2">
+          <div class="section-2-p">
+            <p>EUROPA</p>
+          </div>
+          <div class="section-2-p1">
+            <p>
+              The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug wintery cabin.
+            </p>
+          </div>
         </div>
-        <div class="section-2-p1">
-          <p>
-            The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug wintery cabin.
-          </p>
+  
+        <div class="section-3">
+          <div class="section-3-p">
+            <p class="section-3-p1">AVG. DISTANCE</p>
+            <p class="section-3-p2">628 MIL. KM</p>
+          </div>
+          <div class="section-3-sub">
+            <p class="section-3-p1">EST. TRAVEL TIME</p>
+            <p class="section-3-p2">3 YEARS</p>
+          </div>
         </div>
       </div>
     </section>
 
-    <section>
+    <!-- <section>
       <div class="section-3">
         <div class="section-3-p">
           <p class="section-3-p1">AVG. DISTANCE</p>
@@ -73,7 +86,7 @@
           <p class="section-3-p2">3 YEARS</p>
         </div>
       </div>
-    </section>
+    </section> -->
   </main>
 </body>
 </html>
