--- a/pages/destination/destination-mars.html
+++ b/pages/destination/destination-mars.html
@@ -39,39 +39,38 @@
         <div class="hero-img">   
           <img src="/assets/destination/image-mars.png">
         </div>
-        <div>
-          <ul class="hero-list">
-            <li>MOON</li>
-            <li class="hero-list1">MARS</li>
-            <li>EUROPA</li>
-            <li>TITAN</li>
-          </ul>
-        </div>
       </div>
     </section>
 
     <section>
-      <div class="section-2">
-        <div class="section-2-p">
-          <p>MARS</p>
-        </div>
-        <div class="section-2-p1">
-          <p>
-            Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!
-          </p>
-        </div>
+      <div>
+        <ul class="hero-list">
+          <li><a href="/pages/destination/destination-moon.html">MOON</a></li>
+          <li><a href="/pages/destination/destination-mars.html">MARS</a></li>
+          <li><a href="/pages/destination/destination-europa.html">EUROPA</a></li>
+          <li><a href="/pages/destination/destination-titan.html">TITAN</a></li>
+        </ul>
       </div>
-    </section>
-
-    <section>
-      <div class="section-3">
-        <div class="section-3-p">
-          <p class="section-3-p1">AVG. DISTANCE</p>
-          <p class="section-3-p2">225 MIL. KM</p>
+      <div>
+        <div class="section-2">
+          <div class="section-2-p">
+            <p>MARS</p>
+          </div>
+          <div class="section-2-p1">
+            <p>
+              Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!
+            </p>
+          </div>
         </div>
-        <div class="section-3-sub">
-          <p class="section-3-p1">EST. TRAVEL TIME</p>
-          <p class="section-3-p2">9 MONTHS</p>
+        <div class="section-3">
+          <div class="section-3-p">
+            <p class="section-3-p1">AVG. DISTANCE</p>
+            <p class="section-3-p2">225 MIL. KM</p>
+          </div>
+          <div class="section-3-sub">
+            <p class="section-3-p1">EST. TRAVEL TIME</p>
+            <p class="section-3-p2">9 MONTHS</p>
+          </div>
         </div>
       </div>
     </section>
