--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -45,10 +45,10 @@
     <section>
       <div>
         <ul class="hero-list">
-          <li class="hero-list1">MOON</li>
-          <li>MARS</li>
-          <li>EUROPA</li>
-          <li>TITAN</li>
+          <li><a href="/pages/destination/destination-moon.html">MOON</a></li>
+          <li><a href="/pages/destination/destination-mars.html">MARS</a></li>
+          <li><a href="/pages/destination/destination-europa.html">EUROPA</a></li>
+          <li><a href="/pages/destination/destination-titan.html">TITAN</a></li>
         </ul>
       </div>
       <div>
