--- a/pages/technology/technology-spaceport.html
+++ b/pages/technology/technology-spaceport.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/styles/commonstyles.css">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
+<body class="technology-spaceport">
   <picture>
     <source media="(min-width:768px)" srcset="/assets/technology/background-technology-tablet.jpg" class="body_img">
     <source media="(min-width:992px)" srcset="/assets/technology/background-technology-desktop.jpg">
@@ -43,14 +43,14 @@
     <section>
       <div class="section-2">
         <div class="section-2-flex">
+          <div class="section-2-sub ">
+            <p><a href="/pages/technology/technology-vehicle.html"  >1</a></p>
+          </div>
+          <div class="section-2-sub link2">
+            <p><a href="/pages/technology/technology-spaceport.html" >2</a></p>
+          </div>
           <div class="section-2-sub">
-            <p><a href="/pages/technology/technology-vehicle.html"  class="link-style-tech">1</a></p>
-          </div>
-          <div class="section-2-sub section-2-sub0 ">
-            <p><a href="/pages/technology/technology-spaceport.html" class="link-style-tech">2</a></p>
-          </div>
-          <div class="section-2-sub section-2-sub0 ">
-            <p><a href="/pages/technology/technology-capsule.html" class="link-style-tech">3</a></p>
+            <p><a href="/pages/technology/technology-capsule.html" >3</a></p>
           </div>
         </div>
         <div class="section-2-sub1">
