--- a/pages/destination/destination-titan.html
+++ b/pages/destination/destination-titan.html
@@ -38,39 +38,38 @@
         <div class="hero-img">   
           <img src="/assets/destination/image-titan.png">
         </div>
-        <div>
-          <ul class="hero-list">
-            <li>MOON</li>
-            <li>MARS</li>
-            <li>EUROPA</li>
-            <li class="hero-list1">TITAN</li>
-          </ul>
-        </div>
       </div>
     </section>
 
     <section>
-      <div class="section-2">
-        <div class="section-2-p">
-          <p>TITAN</p>
-        </div>
-        <div class="section-2-p1">
-          <p>
-            The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.
-          </p>
-        </div>
+      <div>
+        <ul class="hero-list">
+          <li><a href="/pages/destination/destination-moon.html">MOON</a></li>
+          <li><a href="/pages/destination/destination-mars.html">MARS</a></li>
+          <li><a href="/pages/destination/destination-europa.html">EUROPA</a></li>
+          <li><a href="/pages/destination/destination-titan.html">TITAN</a></li>
+        </ul>
       </div>
-    </section>
-
-    <section>
-      <div class="section-3">
-        <div class="section-3-p">
-          <p class="section-3-p1">AVG. DISTANCE</p>
-          <p class="section-3-p2">1.6 BIL. KM</p>
+      <div>
+        <div class="section-2">
+          <div class="section-2-p">
+            <p>TITAN</p>
+          </div>
+          <div class="section-2-p1">
+            <p>
+              The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.
+            </p>
+          </div>
         </div>
-        <div class="section-3-sub">
-          <p class="section-3-p1">EST. TRAVEL TIME</p>
-          <p class="section-3-p2">7 YEARS</p>
+        <div class="section-3">
+          <div class="section-3-p">
+            <p class="section-3-p1">AVG. DISTANCE</p>
+            <p class="section-3-p2">1.6 BIL. KM</p>
+          </div>
+          <div class="section-3-sub">
+            <p class="section-3-p1">EST. TRAVEL TIME</p>
+            <p class="section-3-p2">7 YEARS</p>
+          </div>
         </div>
       </div>
     </section>
