--- a/pages/destination/destination-mars.html
+++ b/pages/destination/destination-mars.html
@@ -20,13 +20,25 @@
       <img src="/assets/shared/logo.svg" alt="logo">
       <p class="head-border"></p>
       <ul class="nav-ul">
-        <li><a href="/">HOME</a></li>
-        <li><a href="/pages/destination/destination-moon.html">DESTINATION</a></li>
-        <li><a href="/pages/crew/crew-commander.html">CREW</a></li>
-        <li><a href="/pages/technology/technology-vehicle.html">TECHNOLOGY</a></li>
+        <li class="nav-item main-nav-item">
+          <p class="nav-item-sub">00</p>
+          <a href="/">HOME</a>
+        </li>
+        <li class="nav-item  main-nav-item">
+          <p class="nav-item-sub">01</p>
+          <a href="/pages/destination/destination-moon.html">DESTINATION</a>
+        </li>
+        <li class="nav-item main-nav-item">
+          <p class="nav-item-sub">02</p>
+          <a href="/pages/crew/crew-commander.html">CREW</a>
+        </li>
+        <li class="nav-item main-nav-item">
+          <p class="nav-item-sub">03</p>
+          <a href="/pages/technology/technology-vehicle.html">TECHNOLOGY</a>
+        </li>
       </ul>
       
-      <img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+      <button class="menu"><img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu-icon"></button>
     </nav>
   </header>
   <main class="container">
@@ -45,10 +57,10 @@
     <section>
       <div>
         <ul class="hero-list">
-          <li><a href="/pages/destination/destination-moon.html">MOON</a></li>
-          <li><a href="/pages/destination/destination-mars.html">MARS</a></li>
-          <li><a href="/pages/destination/destination-europa.html">EUROPA</a></li>
-          <li><a href="/pages/destination/destination-titan.html">TITAN</a></li>
+          <li class="hero-list-li"><a href="/pages/destination/destination-moon.html">MOON</a></li>
+          <li class="hero-list-li"><a href="/pages/destination/destination-mars.html">MARS</a></li>
+          <li class="hero-list-li"><a href="/pages/destination/destination-europa.html">EUROPA</a></li>
+          <li class="hero-list-li"><a href="/pages/destination/destination-titan.html">TITAN</a></li>
         </ul>
       </div>
       <div>
@@ -75,5 +87,6 @@
       </div>
     </section>
   </main>
+  <script src="/script/index.js"></script>
 </body>
 </html>
