--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -19,13 +19,25 @@
       <img src="/assets/shared/logo.svg" alt="logo">
       <p class="head-border"></p>
       <ul class="nav-ul">
-        <li><a href="/" class="link-style">HOME</a></li>
-        <li><a href="/pages/destination/destination-moon.html" class="link-style">DESTINATION</a></li>
-        <li><a href="/pages/crew/crew-commander.html" class="link-style">CREW</a></li>
-        <li><a href="/pages/technology/technology-vehicle.html" class="link-style">TECHNOLOGY</a></li>
+        <li class="nav-item main-nav-item">
+          <p class="nav-item-sub">00</p>
+          <a href="/">HOME</a>
+        </li>
+        <li class="nav-item  main-nav-item">
+          <p class="nav-item-sub">01</p>
+          <a href="/pages/destination/destination-moon.html">DESTINATION</a>
+        </li>
+        <li class="nav-item main-nav-item">
+          <p class="nav-item-sub">02</p>
+          <a href="/pages/crew/crew-commander.html">CREW</a>
+        </li>
+        <li class="nav-item main-nav-item">
+          <p class="nav-item-sub">03</p>
+          <a href="/pages/technology/technology-vehicle.html">TECHNOLOGY</a>
+        </li>
       </ul>
       
-      <img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+      <button class="menu"><img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu-icon"></button>
     </nav>
   </header>
   <main class="container">
@@ -67,5 +79,6 @@
       </div>
     </section>
   </main>
+  <script src="/script/index.js"></script>
 </body>
 </html>
